Remove catch, rename, remove static